docs/version-1.28/modules/en/pages/tutorials/writing-policies/dotnet.adoc
= C#
:revdate: 2025-07-09
:page-revdate: {revdate}
:description: Learn how to write and manage policies for .NET Core using the WebAssembly WASI platform by consulting official documentation.
:doc-persona: ["kubewarden-policy-developer"]
:doc-topic: ["kubewarden", "writing-policies", "c#"]
:doc-type: ["tutorial"]
:keywords: ["kubewarden", "kubernetes", "writing policies", "c#", ".net"]
:sidebar_label: C#
:sidebar_position: 40
:current-version: {page-origin-branch}

Currently, .NET Core has experimental support for the WebAssembly WASI platform.
This is from the https://github.com/SteveSandersonMS/dotnet-wasi-sdk[`dotnet-wasi-sdk`] project.

[NOTE]
====

You don't need a Windows installation to write or run .NET Core code.
Everything can be done also on a Linux or on an macOS machine.
====


== Current state

Policy authors can use the following resources:

* https://github.com/kubewarden/policy-sdk-dotnet[Kubewarden .NET Core SDK]:
this provides a set of objects and functions that simplify the process of writing policies.
* https://github.com/kubewarden/policy-sdk-dotnet/tree/main/example[Kubewarden policy example]:
this is an example of a working policy.

No limitations are known.
The SDK enables writing both validating and mutating policies.

It's possible to use the
https://www.nuget.org/packages/KubernetesClient.Models[`KubernetesClient.Models`]
library to deal with the Kubernetes objects.

== Project template

Currently, we don't have a project template that can scaffold a C# policy.

Please, https://github.com/kubewarden/policy-sdk-dotnet/issues[open an issue]
if interested.
